infra/modules/security/kyverno-policies/tests/disallow-latest-tag/resources.yaml
# pinned-tag: image pinned to a semver tag -> allowed
apiVersion: v1
kind: Pod
metadata:
  name: pinned-tag
  namespace: order-service
spec:
  containers:
    - name: app
      image: 1234.dkr.ecr.us-west-2.amazonaws.com/idp/order-service:v1.2.3
---
# latest-tag: image uses the mutable :latest tag -> denied (PCI-DSS 6.5.3)
apiVersion: v1
kind: Pod
metadata:
  name: latest-tag
  namespace: order-service
spec:
  containers:
    - name: app
      image: nginx:latest
