infra/modules/security/kyverno-policies/tests/disallow-latest-tag/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-latest-tag
policies:
  - ../../disallow-latest-tag.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-latest-tag
    rule: disallow-latest
    kind: Pod
    result: pass
    resources:
      - pinned-tag
  - policy: disallow-latest-tag
    rule: disallow-latest
    kind: Pod
    result: fail
    resources:
      - latest-tag
